[package]
name = "vf2-header"
version = "0.1.0"
edition = "2021"
description = "StarFive spl tool in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9"
clap = { version = "4.1.8", features = ["derive"] }
crc = "3.0.1"
clap-num = "1.0.2"
bincode = "1.3.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_arrays = "0.1.0"
